--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     }
 
     function generateMessageId() {
-      return Math.random().toString(36).substr(2, 9);
+      return Math.random().toString(36).substr(2, 16);
     }
 
     function validateUsername(username) {
@@ -90,26 +90,26 @@
     console.log('WebSocket created');
 
     socket.onopen = () => {
-      console.log('WebSocket opened');
+      console.log('WebSocket opened, state: ' + socket.readyState);
       statusElement.textContent = 'Start a new chat or connect to an existing one';
     };
 
     socket.onerror = error => {
       statusElement.textContent = 'WebSocket error. Please try again.';
-      console.error('WebSocket error:', error);
+      console.error('WebSocket error, state: ' + socket.readyState + ':', error);
       connectionTimeouts.forEach(timeout => clearTimeout(timeout));
     };
 
     socket.onclose = () => {
       statusElement.textContent = 'WebSocket closed. Please refresh.';
-      console.error('WebSocket closed');
+      console.error('WebSocket closed, state: ' + socket.readyState);
       connectionTimeouts.forEach(timeout => clearTimeout(timeout));
       isInitiator = false;
       maxClientsContainer.classList.add('hidden');
     };
 
     socket.onmessage = event => {
-      console.log('Received WebSocket message:', event.data);
+      console.log('Received WebSocket message, state: ' + socket.readyState + ':', event.data);
       try {
         const message = JSON.parse(event.data);
         console.log('Parsed message:', message);
@@ -135,19 +135,19 @@
           totalClients = 1;
           console.log(`Initialized client ${clientId}, username: ${username}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
           usernames.set(clientId, username);
-          console.log(`Set own username: ${username} for client ${clientId}, usernames: ${[...usernames.entries()]}`);
-          initializeMaxClientsUI();
+          console.log(`Set own username: ${username} for clientId ${clientId}:`, usernames);
+          initializeMaxClients();
           updateMaxClientsUI();
         }
         if (message.type === 'initiator-changed') {
           console.log(`Initiator changed to ${message.newInitiator} for code: ${code}`);
           isInitiator = message.newInitiator === clientId;
-          initializeMaxClientsUI();
+          initializeMaxClients();
           updateMaxClientsUI();
         }
         if (message.type === 'join-notify' && message.code === code) {
           totalClients = message.totalClients;
-          console.log(`Join-notify received for code: ${code}, client: ${message.clientId}, total: ${totalClients}, maxClients: ${maxClients}, username: ${message.username}`);
+          console.log(`Join-notify received for code: ${code}, client: ${message.clientId}, total: ${message.totalClients}, maxClients: ${maxClients}, username: ${message.username}`);
           if (message.username) {
             usernames.set(message.clientId, message.username);
             console.log(`Updated usernames: ${message.clientId} -> ${message.username}, usernames: ${[...usernames.entries()]}`);
@@ -171,24 +171,24 @@
           console.log(`Max clients updated to ${maxClients} for code: ${code}`);
           updateMaxClientsUI();
         }
-        if (message.type === 'offer' && message.clientId !== clientId) {
+        if (message.type === 'offer' && message.clientId && message.clientId !== clientId) {
           console.log(`Received offer from ${message.clientId} for code: ${code}`);
           handleOffer(message.offer, message.clientId);
         }
-        if (message.type === 'answer' && message.clientId !== clientId) {
+        if (message.type === 'answer' && message.clientId && message.clientId !== clientId) {
           console.log(`Received answer from ${message.clientId} for code: ${code}`);
           handleAnswer(message.answer, message.clientId);
         }
-        if (message.type === 'candidate' && message.clientId !== clientId) {
+        if (message.type === 'candidate' && message.clientId && message.clientId !== clientId) {
           console.log(`Received ICE candidate from ${message.clientId} for code: ${code}`);
           handleCandidate(message.candidate, message.clientId);
         }
       } catch (error) {
-        console.error('Error parsing message:', error);
+        console.error('Error parsing message:', error, 'Raw data:', event.data);
       }
     };
 
-    function initializeMaxClientsUI() {
+    function initializeMaxClients() {
       const maxClientsRadios = document.getElementById('maxClientsRadios');
       maxClientsRadios.innerHTML = '';
       if (isInitiator) {
@@ -234,7 +234,7 @@
     function setMaxClients(n) {
       if (isInitiator && clientId && socket.readyState === WebSocket.OPEN) {
         maxClients = n;
-        console.log(`Initiator ${clientId} setting max clients to ${n} for code: ${code}`);
+        console.log(`Initiator ${clientId} setting max clients to ${n} for code: ${code}, socket state: ${socket.readyState}`);
         socket.send(JSON.stringify({ type: 'set-max-clients', maxClients: n, code }));
         updateMaxClientsUI();
       } else {
@@ -243,7 +243,7 @@
     }
 
     function startPeerConnection(targetId, isOfferer) {
-      console.log(`Starting peer connection with ${targetId} for code: ${code}, offerer: ${isOfferer}`);
+      console.log(`Starting peer connection with ${targetId} for code: ${code}, offerer: ${isOfferer}, socket state: ${socket.readyState}`);
       if (peerConnections.has(targetId)) {
         console.log(`Cleaning up existing connection with ${targetId}`);
         cleanupPeerConnection(targetId);
@@ -254,9 +254,9 @@
           { urls: 'stun:stun1.l.google.com:19302' },
           { urls: 'stun:stun2.l.google.com:19302' },
           { 
-            urls: ['turn:openrelay.metered.ca:80', 'turn:ssl.openrelay.metered.ca:443'], 
-            username: 'openrelayproject', 
-            credential: 'openrelayproject'
+            urls: ['turn:openrelay.metered.ca:80', 'turns:openrelay.metered.ca:443'], 
+            username: 'openrelay', 
+            credential: 'openrelay'
           },
           {
             urls: 'turn:numb.viagenie.ca',
@@ -272,7 +272,7 @@
       let dataChannel;
       try {
         if (isOfferer) {
-          dataChannel = peerConnection.createDataChannel('chat', { reliable: true });
+          dataChannel = peerConnection.createDataChannel('chat', { id: 0 });
           console.log(`Created data channel for ${targetId}`);
           setupDataChannel(dataChannel, targetId);
           dataChannels.set(targetId, dataChannel);
@@ -286,7 +286,11 @@
       peerConnection.onicecandidate = event => {
         if (event.candidate) {
           console.log(`Sending ICE candidate to ${targetId} for code: ${code}`, event.candidate);
-          socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code, targetId }));
+          if (socket.readyState === WebSocket.OPEN) {
+            socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code, targetId }));
+          } else {
+            console.warn(`Cannot send ICE candidate to ${targetId}, socket state: ${socket.readyState}`);
+          }
         } else {
           console.log(`ICE candidate gathering complete for ${targetId}`);
         }
@@ -296,10 +300,10 @@
         console.log(`ICE gathering state for ${targetId}: ${peerConnection.iceGatheringState}`);
         if (peerConnection.iceGatheringState === 'complete' && isOfferer) {
           console.log(`ICE gathering complete, sending offer to ${targetId}`);
-          if (peerConnection.localDescription) {
+          if (peerConnection.localDescription && socket.readyState === WebSocket.OPEN) {
             socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code, targetId }));
           } else {
-            console.error(`No local description for ${targetId} after ICE gathering`);
+            console.warn(`Cannot send offer to ${targetId}: localDescription=${!!peerConnection.localDescription}, socket state: ${socket.readyState}`);
           }
         }
       };
@@ -314,7 +318,7 @@
           if (retryCount < maxRetries) {
             retryCounts.set(targetId, retryCount + 1);
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
-            setTimeout(() => startPeerConnection(targetId, isOfferer), 1000);
+            setTimeout(() => startPeerConnection(targetId, isOfferer), 2000);
           } else {
             statusElement.textContent = 'Connection timed out. Please try again.';
             console.error(`Max retries reached for ${targetId}`);
@@ -370,7 +374,7 @@
           if (retryCount < maxRetries) {
             retryCounts.set(targetId, retryCount + 1);
             console.log(`Retrying connection attempt ${retryCount + 1} with ${targetId}`);
-            setTimeout(() => startPeerConnection(targetId, isOfferer), 1000);
+            setTimeout(() => startPeerConnection(targetId, isOfferer), 2000);
           } else {
             statusElement.textContent = 'Connection timed out. Please try again.';
             console.error(`Max retries reached for ${targetId}`);
@@ -445,16 +449,18 @@
     }
 
     function handleOffer(offer, targetId) {
-      console.log(`Handling offer from ${targetId} for code: ${code}`);
+      console.log(`Handling offer from ${targetId} for code: ${code}, offer:`, JSON.stringify(offer, null, 2));
       try {
-        if (offer.type !== 'offer') {
-          console.error(`Received invalid offer type from ${targetId}:`, offer.type);
+        if (!offer || offer.type !== 'offer' || !offer.sdp) {
+          console.error(`Received invalid offer from ${targetId}:`, offer);
           return;
         }
         if (!peerConnections.has(targetId)) {
+          console.log(`Starting new peer connection for offer from ${targetId}`);
           startPeerConnection(targetId, false);
         }
         const peerConnection = peerConnections.get(targetId);
+        console.log(`Setting remote description for ${targetId}, signalingState: ${peerConnection.signalingState}`);
         peerConnection.setRemoteDescription(new RTCSessionDescription(offer))
           .then(() => {
             console.log(`Set remote description for offer from ${targetId}`);
@@ -466,7 +472,12 @@
           })
           .then(() => {
             console.log(`Set local description for answer to ${targetId}`);
-            socket.send(JSON.stringify({ type: 'answer', answer: peerConnection.localDescription, code, targetId }));
+            if (socket.readyState === WebSocket.OPEN) {
+              socket.send(JSON.stringify({ type: 'answer', answer: peerConnection.localDescription, code, targetId }));
+              console.log(`Sent answer to ${targetId} for code: ${code}`);
+            } else {
+              console.warn(`Cannot send answer to ${targetId}, socket state: ${socket.readyState}`);
+            }
             const queue = candidatesQueues.get(targetId) || [];
             queue.forEach(candidate => {
               handleCandidate(candidate, targetId);
@@ -483,17 +494,18 @@
     }
 
     function handleAnswer(answer, targetId) {
-      console.log(`Handling answer from ${targetId} for code: ${code}`);
+      console.log(`Handling answer from ${targetId} for code: ${code}, answer:`, JSON.stringify(answer, null, 2));
       try {
         const peerConnection = peerConnections.get(targetId);
         if (!peerConnection || peerConnection.signalingState !== 'have-local-offer') {
           console.error(`Invalid signaling state for ${targetId}:`, peerConnection ? peerConnection.signalingState : 'no peerConnection');
           return;
         }
-        if (answer.type !== 'answer') {
-          console.error(`Received invalid answer type from ${targetId}:`, answer.type);
+        if (!answer || answer.type !== 'answer' || !answer.sdp) {
+          console.error(`Invalid answer from ${targetId}:`, answer);
           return;
         }
+        console.log(`Setting remote answer for ${targetId}, signalingState: ${peerConnection.signalingState}`);
         peerConnection.setRemoteDescription(new RTCSessionDescription(answer))
           .then(() => {
             console.log(`Set remote description for answer from ${targetId}`);
@@ -501,10 +513,10 @@
             queue.forEach(candidate => {
               handleCandidate(candidate, targetId);
             });
-            candidatesQueues.set(targetId, []);
+            candidatesQueues.delete(targetId);
           })
           .catch(error => {
-            console.error(`Error setting remote description for answer from ${targetId}:`, error);
+            console.error(`Error setting remote answer from ${targetId}:`, error);
             cleanupPeerConnection(targetId);
           });
       } catch (error) {
@@ -513,10 +525,11 @@
     }
 
     function handleCandidate(candidate, targetId) {
-      console.log(`Handling ICE candidate from ${targetId} for code: ${code}`);
+      console.log(`Handling ICE candidate from ${targetId} for code: ${code}, candidate:`, candidate);
       try {
         const peerConnection = peerConnections.get(targetId);
         if (peerConnection && peerConnection.remoteDescription) {
+          console.log(`Adding ICE candidate for ${targetId}, signalingState: ${peerConnection.signalingState}`);
           peerConnection.addIceCandidate(new RTCIceCandidate(candidate))
             .then(() => {
               console.log(`Successfully added ICE candidate from ${targetId}`);
@@ -525,13 +538,13 @@
               console.error(`Error adding ICE candidate from ${targetId}:`, error);
             });
         } else {
-          console.log(`Queuing ICE candidate for ${targetId}`);
+          console.log(`Queuing candidate for ${targetId}`);
           const queue = candidatesQueues.get(targetId) || [];
           queue.push(candidate);
           candidatesQueues.set(targetId, queue);
         }
       } catch (error) {
-        console.error(`Error processing ICE candidate from ${targetId}:`, error);
+        console.error(`Error processing candidate from ${targetId}:`, error);
       }
     }
 
@@ -553,7 +566,7 @@
         console.log(`Closed data channel with ${targetId}`);
       }
       candidatesQueues.delete(targetId);
-      clearTimeout(connectionTimeouts.get(targetId));
+      clearTimeout(connectionTimeouts.deleteget(targetId));
       connectionTimeouts.delete(targetId);
       retryCounts.delete(targetId);
       isConnected = dataChannels.size > 0;
@@ -571,7 +584,7 @@
               dataChannel.send(JSON.stringify(message));
               console.log(`Sent message ${messageId} to ${targetId}, state: ${dataChannel.readyState}`);
             } else {
-              console.log(`Skipped sending to ${targetId}, state: ${dataChannel.readyState}`);
+              console.log(`Skipped message to ${targetId}, state: ${dataChannel.readyState}`);
             }
           });
           const messages = document.getElementById('messages');
@@ -613,8 +626,13 @@
       connectContainer.classList.add('hidden');
       initialContainer.classList.add('hidden');
       statusElement.textContent = 'Waiting for connection...';
-      console.log(`Starting chat with username: ${username}, code: ${code}`);
-      socket.send(JSON.stringify({ type: 'join', code, username }));
+      console.log(`Starting chat with username: ${username}, code: ${code}, socket state: ${socket.readyState}`);
+      if (socket.readyState === WebSocket.OPEN) {
+        socket.send(JSON.stringify({ type: 'join', code, username }));
+      } else {
+        console.error(`Cannot send join message, socket state: ${socket.readyState}`);
+        statusElement.textContent = 'WebSocket not connected. Please refresh.';
+      }
     };
 
     document.getElementById('connectButton').onclick = () => {
@@ -636,8 +654,13 @@
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
       statusElement.textContent = 'Connecting...';
-      console.log(`Connecting with username: ${username}, code: ${code}`);
-      socket.send(JSON.stringify({ type: 'join', code, username }));
+      console.log(`Connecting with username: ${username}, code: ${code}, socket state: ${socket.readyState}`);
+      if (socket.readyState === WebSocket.OPEN) {
+        socket.send(JSON.stringify({ type: 'join', code, username }));
+      } else {
+        console.error(`Cannot send join message, socket state: ${socket.readyState}`);
+        statusElement.textContent = 'WebSocket not connected. Please refresh.';
+      }
     };
 
     document.getElementById('backButton').onclick = () => {
@@ -647,9 +670,9 @@
     };
 
     document.getElementById('backButtonConnect').onclick = () => {
-      connectContainer.classList.add('hidden');
-      initialContainer.classList.remove('hidden');
-      statusElement.textContent = 'Start a new chat or connect to an existing one';
+      connectContainer.classList.remove('hidden');
+      initialContainer.classList.add('hidden');
+      statusElement.textContent = 'Enter a username and code to join a chat';
     };
 
     document.getElementById('sendButton').onclick = () => {
@@ -687,7 +710,7 @@
       codeDisplayElement.textContent = '';
       codeDisplayElement.classList.add('hidden');
       statusElement.textContent = 'Start a new chat or connect to an existing one';
-      console.log('New session started');
+      console.log('New session started, socket state: ' + socket.readyState);
       document.getElementById('messages').innerHTML = '';
       document.getElementById('messageInput').value = '';
       document.getElementById('usernameInput').value = '';
@@ -699,7 +722,11 @@
       chatContainer.classList.add('hidden');
       newSessionButton.classList.add('hidden');
       maxClientsContainer.classList.add('hidden');
-      socket.send(JSON.stringify({ type: 'join' }));
+      if (socket.readyState === WebSocket.OPEN) {
+        socket.send(JSON.stringify({ type: 'join' }));
+      } else {
+        console.error('Cannot send join for new session, socket state: ' + socket.readyState);
+      }
     };
 
     document.getElementById('usernameInput').addEventListener('keydown', event => {
