--- a/index.html
+++ b/index.html
@@ -200,6 +200,49 @@
       statusElement.textContent = isConnected ? `Connected (${totalClients}/${maxClients} users)` : 'Waiting for connection...';
     }
 
+    function testTurnServer(url, username, credential) {
+      return new Promise((resolve) => {
+        const pc = new RTCPeerConnection({ iceServers: [{ urls: url, username, credential }] });
+        pc.createDataChannel('test');
+        pc.createOffer()
+          .then(offer => pc.setLocalDescription(offer))
+          .then(() => {
+            let hasRelay = false;
+            pc.onicecandidate = event => {
+              if (event.candidate && event.candidate.candidate.includes('typ relay')) {
+                hasRelay = true;
+              }
+            };
+            setTimeout(() => {
+              pc.close();
+              resolve(hasRelay);
+            }, 5000);
+          })
+          .catch(error => {
+            console.error(`TURN test failed for ${url}:`, error);
+            pc.close();
+            resolve(false);
+          });
+      });
+    }
+
+    async function checkTurnServers() {
+      const servers = [
+        { url: 'turn:turn.anyfirewall.com:443?transport=tcp', username: 'webrtc', credential: 'webrtc' }
+      ];
+      for (const server of servers) {
+        const result = await testTurnServer(server.url, server.username, server.credential);
+        console.log(`TURN server ${server.url} test: ${result ? 'Success (relay candidates found)' : 'Failed (no relay candidates)'}`);
+        statusElement.textContent = `TURN test: ${server.url} ${result ? 'OK' : 'Failed'}`;
+      }
+    }
+
+    socket.onopen = () => {
+      console.log('WebSocket opened, state: ' + socket.readyState);
+      statusElement.textContent = 'Start a new chat or connect to an existing one';
+      checkTurnServers();
+    };
+
     function startPeerConnection(targetId, isOfferer) {
       console.log(`Starting peer with ${targetId}, offerer: ${isOfferer}`);
       cleanupPeerConnection(targetId);
@@ -207,10 +250,8 @@
         iceServers: [
           { urls: 'stun:stun.l.google.com:19302' },
           { urls: 'stun:stun1.l.google.com:19302' },
-          { urls: ['turn:openrelay.metered.ca:80', 'turn:openrelay.metered.ca:443'], username: 'openrelay', credential: 'openrelay' },
-          { urls: 'turn:relay1.expressturn.com:3478', username: 'efQUY346I0WJSAEHLH', credential: 'pK7Wq3nGrU0y1qLo' }
-        ],
-        iceTransportPolicy: 'relay' // Force TURN for debugging
+          { urls: 'turn:turn.anyfirewall.com:443?transport=tcp', username: 'webrtc', credential: 'webrtc' }
+        ]
       });
       peerConnections.set(targetId, peerConnection);
       candidatesQueues.set(targetId, []);
@@ -287,7 +328,7 @@
         console.log(`Retry ${retries} for ${targetId}`);
         setTimeout(() => startPeerConnection(targetId, isOfferer), 5000 * retries);
       } else {
-        statusElement.textContent = 'Connection failed. Please try again.';
+        statusElement.textContent = 'Connection failed. Please try again or check network.';
         cleanupPeerConnection(targetId);
       }
     }
